--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,3 +5,10 @@ tr.first-bracket:not(:first-child) > td {
 footer {
   margin-top: 10em;
 }
+
+/* Fix CSS collision between Bootstrap and Swagger-UI*/
+.swagger-ui pre {
+    padding: 0;
+    border: none;
+    background: none;
+}
