--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,27 @@
+header {
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+header h1, header.jumbotron h1 {
+  margin-top: 0;
+  font-size: 250%;
+}
+
+header a {
+  font-weight: 600;
+}
+
+header img {
+  margin-top: 1em;
+  max-width: 12em;
+}
+
+header .openfiscaPresentation p {
+  font-size: 90%;
+  margin-top: 1em;
+}
+
 
 tr.first-bracket:not(:first-child) > td {
   border-top-width: 5px;
