--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -49,6 +49,24 @@ td.list-entry{
   font-weight: bold;
 }
 
+.loading {
+  font-size: 200%;
+  text-align: center;
+}
+
+.loading .glyphicon-refresh {
+  display: block;
+  margin-bottom: .5em;
+
+  -webkit-animation: spin 4s linear infinite;
+  -moz-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 footer {
   margin-top: 10em;
 }
