--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -27,7 +27,7 @@ tr.first-bracket:not(:first-child) > td {
   border-top-width: 5px;
 }
 
-/* OpenFisca variable and parameter description */
+/* OpenFisca entiry, variable and parameter description */
 p.description {
   font-size: large;
   margin-top: 3%;
@@ -46,6 +46,13 @@ span.message {
   display: block;
   white-space: pre-wrap;
   margin-bottom: 1.5em;
+}
+
+pre {
+  font: inherit;
+  padding: 0;
+  border: none;
+  background: none;
 }
 
 table.in-metadata {
