--- a/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
@@ -11,8 +11,6 @@ server {
 
     location ~{{ legislation_explorer_base_url_path }}(.*)$ {
         proxy_pass http://legislation-explorer$1;
-        proxy_set_header Host $http_host;
-        proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        include proxy_params;
     }
 }
