Include proxy_params file with full path

--- a/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
@@ -11,6 +11,6 @@ server {
 
     location ~ ^{{ legislation_explorer_base_url_path }}(.*)$ {
         proxy_pass http://legislation-explorer$1;
-        include proxy_params;
+        include /etc/nginx/proxy_params;
     }
 }
