--- a/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
@@ -1,18 +1,18 @@
 NODE_ENV=production
 
-HOST={{ legislation_explorer_host }}
-PORT={{ legislation_explorer_http_port }}
-PATHNAME={{ legislation_explorer_base_url_path }}
+HOST={{ host }}
+PORT={{ http_port }}
+PATHNAME={{ base_url_path }}
 
-API_URL={{ legislation_explorer_api_url | quote }}
-CHANGELOG_URL={{ legislation_explorer_changelog_url | quote }}
+API_URL={{ api_url | quote }}
+CHANGELOG_URL={{ changelog_url | quote }}
 
-UI_STRINGS={{ legislation_explorer_ui_strings | regex_replace('\n', '') | regex_replace(" +", "") }}
+UI_STRINGS={{ ui_strings | regex_replace('\n', '') | regex_replace(" +", "") }}
 
-{% if legislation_explorer_matomo_url %}
-MATOMO_URL={{ legislation_explorer_matomo_url }}
+{% if matomo_url %}
+MATOMO_URL={{ matomo_url }}
 {% endif %}
 
-{% if legislation_explorer_matomo_site_id %}
-MATOMO_SITE_ID={{ legislation_explorer_matomo_site_id }}
+{% if matomo_site_id %}
+MATOMO_SITE_ID={{ matomo_site_id }}
 {% endif %}
