--- a/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.service.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.service.j2
@@ -4,8 +4,8 @@ Description=OpenFisca Legislation Explorer
 [Service]
 ExecStart=/usr/bin/npm start
 WorkingDirectory={{ legislation_explorer_source_dir | quote }}
-User={{ legislation_explorer_unix_user_name }}
-Group={{ legislation_explorer_unix_group_name }}
+User={{ unix_user_name }}
+Group={{ unix_group_name }}
 Restart=always
 
 [Install]
