--- a/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
@@ -1,8 +1,8 @@
 NODE_ENV=production
 
 HOST={{ host }}
-PORT={{ http_port }}
-PATHNAME={{ base_url_path }}
+PORT={{ port }}
+PATHNAME={{ base_path }}
 
 API_URL={{ api_url | quote }}
 CHANGELOG_URL={{ changelog_url | quote }}
