--- a/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/nginx/legislation-explorer.conf.j2
@@ -1,7 +1,3 @@
-upstream legislation-explorer {
-    server localhost:{{ port }};
-}
-
 server {
     listen 80;
     server_name {{ host_name }};
@@ -10,7 +6,7 @@ server {
     error_log /var/log/nginx/{{ host_name }}-error.log;
 
     location ~ ^{{ base_path }}(.*)$ {
-        proxy_pass http://legislation-explorer$1;
+        proxy_pass http://127.0.0.1:{{ port }}/$1;
         include /etc/nginx/proxy_params;
     }
 }
