Rename `port` into `app_port`
because it's a reserved variable

--- a/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/systemd/legislation-explorer.env.j2
@@ -1,7 +1,7 @@
 NODE_ENV=production
 
 HOST={{ app_host }}
-PORT={{ port }}
+PORT={{ app_port }}
 PATHNAME={{ base_path }}
 
 API_URL={{ api_url | quote }}
