Extract reverse_proxy Ansible role

--- a/ops/ansible/roles/legislation_explorer/templates/legislation-explorer.env.j2
+++ b/ops/ansible/roles/legislation_explorer/templates/legislation-explorer.env.j2
@@ -2,7 +2,7 @@ NODE_ENV=production
 
 HOST={{ app_host }}
 PORT={{ app_port }}
-PATHNAME={{ base_path }}
+PATHNAME={{ reverse_proxy_base_path }}
 
 API_URL={{ api_url | quote }}
 CHANGELOG_URL={{ changelog_url | quote }}
